--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
-    id("com.google.dagger.hilt.android")
+    id 'com.google.dagger.hilt.android'
     id 'kotlin-kapt'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -17,7 +18,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField("String", "WEATHER_API_KEY", "\"${WEATHER_API_KEY}\"")
-        buildConfigField("String", "GOOGLE_API_KEY", "\"${GOOGLE_API_KEY}\"")
+        buildConfigField("String", "MAP_API_KEY", "\"${MAP_API_KEY}\"")
 
     }
 
@@ -78,6 +79,9 @@ dependencies {
 
     //gson
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //place
+    implementation 'com.google.android.libraries.places:places:3.2.0'
 
     //room
 //    def room_version = "2.5.2"
